[package]
name = "db"
version = "0.1.0"
edition = "2021"
description = "simple kv db"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
serde = { version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
serial_test = "0.6.0"
