[package]
name = "leetcode_cache"
version = "0.1.0"
authors = ["snowzhaozhj <190110407@stu.hit.edu.cn>"]
edition = "2021"
description = "simple kv db"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
serde = { version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"

[dev-dependencies]
serial_test = "0.6.0"
